--- a/student_council/pages/clubs.html
+++ b/student_council/pages/clubs.html
@@ -343,17 +343,13 @@
   <div class="container_club">
     <div class="card_club" data-aos="zoom-in">
       <img src="../images/cover_images/logo.png" alt="club logo">
-      <h2>Cognisance</h2>
-      <p>Cognisance - where gaming passion meets camaraderie. This vibrant club ignites excitement and fosters a
-        sense of belonging among gamers of all levels. With a motto centred around embracing the thrill of
-        virtual adventure, Cognisance offers a diverse range of activities, from casual gaming sessions to
-        competitive tournaments. Encouraging friendly competition and teamwork, members are invited to push the
-        boundaries of their gaming prowess while forging lasting friendships.</p>
+      <h2>The Electoral Literacy Club (ELC) </h2>
+      <p>The Electoral Literacy Club (ELC) at MIT ADT University, established on August 15, 2023, under the Office of Student Affairs, aims to foster democratic engagement, civic responsibility, and leadership among students. Through initiatives like voter registration drives, electoral fairs, and campaign participation, the ELC promotes electoral awareness, ethical voting practices, and hands-on civic learning. With educational programs such as lecture series and interactive exhibitions, the club empowers students to actively engage in the democratic process, building a socially responsible and informed community.</p>
       <div class="contact-info">
-        <p><strong>President:</strong> Tanishq Goyal</p>
-        <p><strong>Faculty Coordinator:</strong> Prof. Dr Ganesh Pathak</p>
-        <p>Prof. Dr. NP Kulkarni</p>
-        <p><strong>Contact:</strong> goyaltanishq99@gmail.com</p>
+        <p><strong>President:</strong> Bhoumik Rajput</p>
+        <p><strong>Faculty Coordinator:</strong> Prof. Dr. Suraj Bhoyar</p>
+       
+        <p><strong>Contact:</strong> bhoumikrajput2002@gmail.com</p>
       </div>
       <div class="btn-group">
         <button><a href="https://www.instagram.com/cognisance.mit/" target="_blank">Learn More</a></button>
