--- a/student_council/pages/our_team.html
+++ b/student_council/pages/our_team.html
@@ -108,7 +108,7 @@
                         <div class="container_team">
                             <div class="container-inner_team">
                                 <div class="circle_team"></div>
-                                <img src="../images/team_images/Aaryan.png" height="500">
+                                <img src="../images/team_images/Aaryan.png">
                             </div>
                         </div>
                         <div class="divider_team" style="--color: #003366"></div>
