--- a/student_council/pages/index.html
+++ b/student_council/pages/index.html
@@ -299,7 +299,7 @@
         <h2>Stay updated with our latest happenings!</h2>
         <p>Join us on WhatsApp and Telegram to receive the latest updates, news, and more!</p>
         <div class="join-links">
-            <a href="https://chat.whatsapp.com/LSei1YqL5N5L8BGSA5Cglw" target="_blank" rel="noopener noreferrer" class="whatsapp">
+            <a href="https://whatsapp.com/channel/0029Vaj1uxsLdQekIvxGyu2W" target="_blank" rel="noopener noreferrer" class="whatsapp">
                 <i class="fab fa-whatsapp w3-hover-opacity"></i>
                 Join WhatsApp Group
             </a>
